--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   #to begin you want to launch this job in main and develop
   push:
     branches:
-      - master
+      - main
       - develop
 
   pull_request:
