premier action marche

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 jobs:
-  build-and-test-app:
+  test-backend:
     runs-on: ubuntu-18.04
     steps:
       #checkout your GitHub code using actions/checkout@v2.3.3 and actions/setup-java@v2
