--- a/.github/workflows/mainv2.yml
+++ b/.github/workflows/mainv2.yml
@@ -39,7 +39,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./simple-api
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/simple-api
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1/simple-api
 
       - name: Build image and push database
         uses: docker/build-push-action@v2
@@ -47,7 +47,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./database
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/database
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1/database
            push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push httpd
@@ -56,7 +56,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./httpd
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/httpd
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1/httpd
            push: ${{ github.ref == 'refs/heads/master' }}
 
  
