--- a/.github/workflows/mainv2.yml
+++ b/.github/workflows/mainv2.yml
@@ -39,7 +39,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./simple-api
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/simple-api
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tpdevopsv/simple-api
 
       - name: Build image and push database
         uses: docker/build-push-action@v2
