--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -1,4 +1,4 @@
-name: CI devops 2022 EPF
+name: CI devops 2022 EPF3
 on:
   #to begin you want to launch this job in main and develop
   push:
@@ -38,6 +38,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build image and push backend
         uses: docker/build-push-action@v2
         with:
