--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -50,7 +50,7 @@ jobs:
            context: ./simple-api
            # Note: tags has to be all lower-case
            #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/simple-api
-           push: ${{ github.ref == 'refs/heads/main }}
+           push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push database
         uses: docker/build-push-action@v2
