--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+            #username: ${{ secrets.DOCKERHUB_USERNAME }}
+            #password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build image and push backend
         uses: docker/build-push-action@v2
         with:
