--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -34,10 +34,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build image and push backend
         uses: docker/build-push-action@v2
         with:
