--- a/.github/workflows/mainv2.yml
+++ b/.github/workflows/mainv2.yml
@@ -39,8 +39,8 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./simple-api
            # Note: tags has to be all lower-case
-           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tpdevopsv/simple-api:latest
-            tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tpdevopsv/simple-api
+           #tags: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
       - name: Build image and push database
         uses: docker/build-push-action@v2
         with:
