--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -34,8 +34,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to DockerHub
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-
+        uses: docker/login-action@v1
+        with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+           password: ${{ secrets.DOCKERHUB_TOKEN }}
+           
       - name: Build image and push backend
         uses: docker/build-push-action@v2
         with:
