--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -38,6 +38,7 @@ jobs:
         with:
            username: ${{ secrets.DOCKERHUB_USERNAME }}
            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
            
       - name: Build image and push backend
         uses: docker/build-push-action@v2
@@ -46,6 +47,7 @@ jobs:
            context: ./simple-api
            # Note: tags has to be all lower-case
            #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/simple-api
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-isidore:simple-api
            push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push database
