--- a/.github/workflows/mainv3.yml
+++ b/.github/workflows/mainv3.yml
@@ -24,6 +24,7 @@ jobs:
 
        - name: Build and test with Maven
          run:  mvn package --file simple-api/pom.xml
+         
   build-and-push-docker-image:
     needs: test-backend
 
@@ -48,7 +49,7 @@ jobs:
            # Note: tags has to be all lower-case
            #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/simple-api
            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:simple-api
-           push: ${{ github.ref == 'refs/heads/master' }}
+           #push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push database
         uses: docker/build-push-action@v2
@@ -57,7 +58,7 @@ jobs:
            context: ./database
            # Note: tags has to be all lower-case
            #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1:database
-           push: ${{ github.ref == 'refs/heads/master' }}
+           #push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push httpd
         uses: docker/build-push-action@v2
@@ -66,6 +67,6 @@ jobs:
            context: ./httpd
            # Note: tags has to be all lower-case
            #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1:httpd
-           push: ${{ github.ref == 'refs/heads/master' }}
+           #push: ${{ github.ref == 'refs/heads/master' }}
 
  
