--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI devops 2022 EPF
+name: CI devops 2022 EPF3
 on:
   #to begin you want to launch this job in main and develop
   push:
@@ -14,7 +14,7 @@ jobs:
       #checkout your GitHub code using actions/checkout@v2.3.3 and actions/setup-java@v2
        - name: Set up checkout
          uses: actions/checkout@v2.3.3
-
+       
        - name: Set up JDK 11
          uses: actions/setup-java@v2
          with:
@@ -24,5 +24,50 @@ jobs:
 
        - name: Build and test with Maven
          run:  mvn package --file simple-api/pom.xml
+         
+  build-and-push-docker-image:
+    needs: test-backend
+
+    runs-on: ubuntu-latest
+    # steps to perform in job
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+           
+      - name: Build image and push backend
+        uses: docker/build-push-action@v2
+        with:
+           # relative path to the place where source code with Dockerfile is located
+           context: ./simple-api
+           # Note: tags has to be all lower-case
+           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/simple-api
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:simple-api
+           #push: ${{ github.ref == 'refs/heads/master' }}
+
+      - name: Build image and push database
+        uses: docker/build-push-action@v2
+        with:
+           # relative path to the place where source code with Dockerfile is located
+           context: ./database
+           # Note: tags has to be all lower-case
+           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1:database
+           #push: ${{ github.ref == 'refs/heads/master' }}
+
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v2
+        with:
+           # relative path to the place where source code with Dockerfile is located
+           context: ./httpd
+           # Note: tags has to be all lower-case
+           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1:httpd
+           #push: ${{ github.ref == 'refs/heads/master' }}
+           #
 
  
