--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,53 +25,39 @@ jobs:
        - name: Build and test with Maven
          run:  mvn package --file simple-api/pom.xml
          
-  build-and-push-docker-image:
-    needs: test-backend
-
+ build-and-push-docker-image:
+    needs: build-and-test-app
+    # run only when code is compiling and tests are passing
     runs-on: ubuntu-latest
+
     # steps to perform in job
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Login to DockerHub
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-           username: ${{ secrets.DOCKERHUB_USERNAME }}
-           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-           
       - name: Build image and push backend
         uses: docker/build-push-action@v2
         with:
-           # relative path to the place where source code with Dockerfile is located
-           context: ./simple-api
-           # Note: tags has to be all lower-case
-           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf/simple-api
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:simple-api
-           #push: ${{ github.ref == 'refs/heads/master' }}
-
+        # relative path to the place where source code with Dockerfile is located
+          context: ./simple-api
+        # Note: tags has to be all lower-case
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf:simple-api
       - name: Build image and push database
+          # DO the same for database
         uses: docker/build-push-action@v2
         with:
-           # relative path to the place where source code with Dockerfile is located
-           context: ./database
-           # Note: tags has to be all lower-case
-           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1:database
-           #push: ${{ github.ref == 'refs/heads/master' }}
-
+        # relative path to the place where source code with Dockerfile is located
+          context: ./database
+        # Note: tags has to be all lower-case
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf:database
       - name: Build image and push httpd
+          # DO the same for httpd
         uses: docker/build-push-action@v2
         with:
-           # relative path to the place where source code with Dockerfile is located
-           context: ./httpd
-           # Note: tags has to be all lower-case
-           #tags: ${{secrets.DOCKERHUB_USERNAME}}/tp2devopsv1:httpd
-           #push: ${{ github.ref == 'refs/heads/master' }}
-           #
+        # relative path to the place where source code with Dockerfile is located
+          context: ./httpd
+        # Note: tags has to be all lower-case
+          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf:httpd
 
 
  
