--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,22 @@
-name: CI devops 2022 EPF3
+name: CI devops 2022 EPF
 on:
   #to begin you want to launch this job in main and develop
   push:
     branches:
-      - main
+      - master
+      - develop
 
   pull_request:
 
 jobs:
-  test-backend:
+  build-and-test-app:
     runs-on: ubuntu-18.04
+
     steps:
       #checkout your GitHub code using actions/checkout@v2.3.3 and actions/setup-java@v2
        - name: Set up checkout
          uses: actions/checkout@v2.3.3
-       
+
        - name: Set up JDK 11
          uses: actions/setup-java@v2
          with:
@@ -24,9 +26,9 @@ jobs:
 
        - name: Build and test with Maven
          run:  mvn package --file simple-api/pom.xml
-         
- build-and-push-docker-image:
-    needs: test-backend
+
+  build-and-push-docker-image:
+    needs: build-and-test-app
     # run only when code is compiling and tests are passing
     runs-on: ubuntu-latest
 
@@ -35,29 +37,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build image and push backend
         uses: docker/build-push-action@v2
         with:
-        # relative path to the place where source code with Dockerfile is located
-          context: ./simple-api
-        # Note: tags has to be all lower-case
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf:simple-api
+           # relative path to the place where source code with Dockerfile is located
+           context: ./simple-api
+           # Note: tags has to be all lower-case
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-isidore:simple-api
+
       - name: Build image and push database
-          # DO the same for database
         uses: docker/build-push-action@v2
         with:
-        # relative path to the place where source code with Dockerfile is located
-          context: ./database
-        # Note: tags has to be all lower-case
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf:database
+           # relative path to the place where source code with Dockerfile is located
+           context: ./database
+           # Note: tags has to be all lower-case
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-isidore:simple-api
+
       - name: Build image and push httpd
-          # DO the same for httpd
         uses: docker/build-push-action@v2
         with:
-        # relative path to the place where source code with Dockerfile is located
-          context: ./httpd
-        # Note: tags has to be all lower-case
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf:httpd
-
-
- 
+           # relative path to the place where source code with Dockerfile is located
+           context: ./httpd
+           # Note: tags has to be all lower-case
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-isidore:simple-api
