--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ on:
   #to begin you want to launch this job in main and develop
   push:
     branches:
-      - master
-      - develop
+      - main
+
 
   pull_request:
 
