--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./simple-api
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:simple-api
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/simple-api
            push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push database
@@ -56,7 +56,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./database
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:database
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/database
            push: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Build image and push httpd
@@ -65,6 +65,6 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./httpd
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:httpd
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/httpd
            push: ${{ github.ref == 'refs/heads/master' }}
            
