--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
            context: ./simple-api
            # Note: tags has to be all lower-case
            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/simple-api
-           push: ${{ github.ref == 'refs/heads/master' }}
+           push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push database
         uses: docker/build-push-action@v2
@@ -57,7 +57,7 @@ jobs:
            context: ./database
            # Note: tags has to be all lower-case
            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/database
-           push: ${{ github.ref == 'refs/heads/master' }}
+           push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push httpd
         uses: docker/build-push-action@v2
@@ -66,5 +66,5 @@ jobs:
            context: ./httpd
            # Note: tags has to be all lower-case
            tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/httpd
-           push: ${{ github.ref == 'refs/heads/master' }}
+           push: ${{ github.ref == 'refs/heads/main' }}
            
