--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
+      
+      
       - name: Login to DockerHub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -47,7 +49,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./simple-api
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/simple-api
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:simple-api
            push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push database
