--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./database
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/database
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:database
            push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Build image and push httpd
@@ -67,6 +67,6 @@ jobs:
            # relative path to the place where source code with Dockerfile is located
            context: ./httpd
            # Note: tags has to be all lower-case
-           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy/httpd
+           tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-epf-jeremy:httpd
            push: ${{ github.ref == 'refs/heads/main' }}
            
