--- a/ansible/inventories/setup.yml
+++ b/ansible/inventories/setup.yml
@@ -1,7 +1,7 @@
 all:
   vars:
     ansible_user: centos
-    ansible_ssh_private_key_file: ./id_rsa
+    ansible_ssh_private_key_file: /bin/id_rsa_correcte 
   children:
     prod:
-      hosts: isidore.porretti.takima.cloud
+      hosts: jeremy.thorouss.takima.cloud
